--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,7 +1,27 @@
 .wrapper {
-    padding-left: 25px;
-    padding-right: 25px;
-    max-width: 1200px;
+    overflow: hidden;
+    padding-left: 18px;
+    padding-right: 18px;
+    max-width: 1236px;
     margin-left: auto;
     margin-right: auto;
 }
+
+.wrapper--medium {
+    max-width: 976px;
+}
+
+@media (min-width: 300px) {
+    .wrapper--medium{
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+.wrapper--b-margin {
+    margin-bottom: 1rem;
+    @media screen {
+        margin-bottom: 3.875;
+    }
+}
+
