--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -11,3 +11,13 @@
 @import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_wrapper.css");
 
 @import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_page-section.css");
+
+@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_headline.css");
+
+@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_row.css");
+
+@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_generic-content-container.css");
+
+@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_section-title.css");
+
+@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_feature-item.css");
