--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -21,3 +21,5 @@
 @import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_section-title.css");
 
 @import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_feature-item.css");
+
+@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_testimonial.css");
