--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -8,14 +8,21 @@
 }
 
 .section-title__icon {
- 
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0.6rem;
-    @media screen {
+}
+    @media (min-width: 530px) {
+    .section-title__icon{
+        position: relative;
+        top: 8px;
         margin-right: 0.5rem;
         margin-left: 0;
         display: inline-block;
     }
+}
+
+.section-title--blue {
+    color: #2F5572;
 }
