Completed styling footer.

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -23,3 +23,5 @@
 @import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_feature-item.css");
 
 @import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_testimonial.css");
+
+@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_site-footer.css");
