Completed the CSS part

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -25,3 +25,7 @@
 @import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_testimonial.css");
 
 @import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_site-footer.css");
+
+@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_site-header.css");
+
+@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_primary-nav.css");
