--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -1,5 +1,5 @@
 .site-footer {
-    background-color: #2f5572;
+    background: linear-gradient(to right, #1f1e1e, #dd1818);
     color: #FFF;
     padding: 0.5rem 0;
     text-align: center;
