--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -1,17 +1,24 @@
 .btn {
-    background-color: #2f5572;
-    color: #FFF;
-    text-decoration: none ;
+    color: #FFFFFF;
+    background-color: #7c0000;
+    text-decoration: none;
     padding: .75rem 1.2rem;
     display: inline-block;
+    border: 2px solid #7c0000;
+    transition: 0.5s;
 }
 
-.btn--orange {
-    background-color: #da8506;
-}
-
-.btn--large {
+.btn--large {color: #7c0000;
+    text-decoration: none;
+    padding: .75rem 1.2rem;
+    display: inline-block;
+    border: 2px solid #7c0000;
+    transition: 0.5s;
     padding: 1.1rem 1.9rem;
+}
+
+.btn--large a:hover {
+    background: transparent;
 }
 
 @media (min-width: 530px) {
