--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -1,7 +1,7 @@
 .headline {
     font-weight: 300;
     font-size: 1.9rem;
-    color: #2f5572;
+    color: #ffffff;
 }
 
 @media (min-width: 530px) {
