--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,11 +1,12 @@
 .large-hero {
-    border-bottom: 10px solid #2f5572;
+    border-bottom: 10px solid #c50000;
     position: relative;
     
 }
 
 .large-hero__image {
     display: block;
+    opacity: 0.85;
 }
 
 .large-hero__text-content {
@@ -19,10 +20,11 @@
 }
 
 .large-hero__title {
-    font-weight: 300;
-    color: #2f5572;
+    font-weight: 200;
+    color: #e23232;
     margin: 0;
-    font-size: 2.4rem;
+    font-size: 300px;
+    font-family: Jazz LET, fantasy;
 }
 
 @media (min-width: 530px) {
@@ -32,10 +34,11 @@
 }
 
 .large-hero__subtitle {
-    font-weight: 300;
-    color: #2f5572;
+    font-weight: 400;
+    color: #FFF;
     font-size: 1.5rem;
     margin: 0;
+    font-family: Stencil Std, fantasy;
 }
 
 @media (min-width: 530px) {
@@ -45,13 +48,13 @@
 }
 
 .large-hero__description {
-    color: #FFF;
-    font-size: 1.1rem;
-    font-weight: 100;
-    text-shadow: 2px 2px 0 rgba(0,0,0,.1);
-    max-width: 30rem;
+    color: #ffffff;
+    font-size: 50px;
+    line-height: 5rem;
+    max-width: auto;
     margin-left: auto;
     margin-right: auto;
+    font-family: ("Times New Roman", sans-serif);
 }
 
 @media (min-width: 530px) {
