--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,7 +3,7 @@
     width: 100%;
     padding: 10px 0;
     z-index: 2;
-    background-color: rgba(47, 85, 114, 0.3);
+    background: linear-gradient(to right, #1f1e1e, #dd1818);
 }
 
 @media (max-width: 640px){
@@ -18,9 +18,8 @@
 
 .site-header__logo {
     position: absolute;
-    background-color: #2f5572;
     top: 0;
-    padding: 25px 36px;
+    padding: 5px 6px;
 }
 
 .site-header__menu-content {
@@ -40,11 +39,13 @@
     }
 }
 
-.site-header__menu-icon {
-    width: 20px;
-    height: 20px;
-    background-color: #FFF;
-    position: absolute;
-    top: 10px;
-    right: 10px;
+@media (max-width: 640px) {
+    .site-header__menu-icon {
+        width: 20px;
+        height: 20px;
+        background-color: #FFF;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
 }
