--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -1,5 +1,6 @@
 .testimonial {
-    background-color: rgba(255, 255, 255, 0.8);
+    color: rgb(206, 206, 206);
+    background-color: rgba(58, 44, 44, 0.589);
     padding: 0 18px 1px 18px;
     margin-bottom: 100px;
     @media screen {
@@ -19,14 +20,14 @@
     margin: 0 auto -80px auto;
     position: relative;
     top: -80px;
-    border: 6px solid rgba(255, 255, 255, 0.8);
+    border: 6px solid;
 }
 
 .testimonial__title {
-    color: #2f5572;
+    color: #FFF;
     text-align: center;
     font-size: 1.5rem;
-    font-weight: 500;
+    font-weight: 300;
     margin: 0;
 }
 
