Completed desktop and mobile header styles.

--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,9 +1,17 @@
-.primary-nav {
-    
+.primary nav {
+    padding-top: 0;
 }
 
-.primary-nav--pull-right {
-    float: right;
+@media (max-width: 640px) {
+    .primary-nav {
+        padding-top: 10px;
+    }
+}
+
+@media (min-width: 640px) {
+    .primary-nav--pull-right {
+        float: right;
+    }
 }
 
 .primary-nav ul{
@@ -12,9 +20,17 @@
 }
 
 .primary-nav li{
-    list-style: none;
-    float: left;
+    list-style-type: none;
+    display: inline-block;
     padding-right: 20px;
+}
+
+@media (max-width: 640px) {
+    .primary-nav li{
+        float: none;
+        display: inline-block;
+        padding-right: 10px;
+    }
 }
 
 .primary-nav a{
@@ -22,5 +38,15 @@
     text-decoration: none;
     font-weight: 300;
     display: block;
-    padding: 12px 0;
+    padding: 5px 8px;
+    font-size: 0.8rem;
+    background-color: rgba(47, 85, 114, 0.5);
 }
+
+@media (min-width: 640px) {
+    .primary-nav a{
+        font-size: 1rem;
+        padding: 12px 0;
+        background: transparent;
+    }
+}    
