--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,17 +3,23 @@
     width: 100%;
     padding: 10px 0;
     z-index: 2;
-    background-color: rgba(47, 85, 114, 0.3);
+    transition: background-color 0.5s ease-out;
 }
 
-@media (max-width: 640px){
+.site-header--is-expanded {
+    background-color: rgba(47, 85, 114, 0.55);
+}
+
+@media (min-width: 640px){
     .site-header {
-        background: none;
+        background-color: rgba(47, 85, 114, 0.3);
     }
 }
 
+@media (min-width: 640px) {
 .site-header__btn-container {
     float: right;
+}
 }
 
 .site-header__logo {
@@ -25,12 +31,27 @@
 
 .site-header__menu-content {
     display: block;   
+    opacity: 1;
+    z-index: 1;
+    transform: scale(1);
 }
 
 @media (max-width: 640px){
     .site-header__menu-content {
-        display: none;
+        opacity: 0;
+        transition: all 0.5s ease-out;
+        transform: scale(1.2);
+        position: relative;
+        z-index: -10;
+        padding-top: 85px;
+        text-align: center;
     }
+}
+
+.site-header__menu-content--is-visible {
+    opacity: 1;
+    z-index: 1;
+    transform: scale(1);
 }
 
 @media (max-width: 640px){
@@ -40,11 +61,14 @@
     }
 }
 
-.site-header__menu-icon {
-    width: 20px;
-    height: 20px;
-    background-color: #FFF;
-    position: absolute;
-    top: 10px;
-    right: 10px;
+@media (max-width: 640px) {
+    .site-header__menu-icon {
+        width: 15px;
+        height: 15px;
+        background: url("C:/Users/user/Desktop/Projects/travel-site/app/assets/images/icons/menu-icon.png");
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        z-index: 10;
+    }
 }
