--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -27,3 +27,5 @@
 @import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_site-header.css");
 
 @import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_primary-nav.css");
+
+@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_reveal-item.css");
