--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,4 +1,4 @@
-.primary nav {
+.primary-nav {
     padding-top: 0;
 }
 
@@ -48,5 +48,5 @@
         font-size: 1rem;
         padding: 12px 0;
         background: transparent;
-    }
-}    
+    }    
+}
