--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -6,20 +6,24 @@
     transition: background-color 0.5s ease-out;
 }
 
-.site-header--is-expanded {
-    background-color: rgba(47, 85, 114, 0.55);
-}
-
 @media (min-width: 640px){
     .site-header {
+        position: fixed;
         background-color: rgba(47, 85, 114, 0.3);
     }
+    .site-header--dark {
+        background-color: rgba(23, 53, 72, 0.85);
+    }
+}
+
+.site-header--is-expanded {
+    background-color: rgba(47, 85, 114, 0.55);
 }
 
 @media (min-width: 640px) {
 .site-header__btn-container {
     float: right;
-}
+    }
 }
 
 .site-header__logo {
@@ -27,6 +31,13 @@
     background-color: #2f5572;
     top: 0;
     padding: 25px 36px;
+}
+
+@media (max-width: 640px){
+    .site-header__logo {
+        left: 50%;
+        transform: translateX(-50%) scale(0.8);
+    }
 }
 
 .site-header__menu-content {
@@ -52,13 +63,6 @@
     opacity: 1;
     z-index: 1;
     transform: scale(1);
-}
-
-@media (max-width: 640px){
-    .site-header__logo {
-        left: 50%;
-        transform: translateX(-50%) scale(0.8);
-    }
 }
 
 @media (max-width: 640px) {
