--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,31 +1,35 @@
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_large-hero.css");
+@import url("modules/_large-hero.css");
 
-@import url('C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/base/_global.css');
+@import url('base/_global.css');
 
-@import url('C:/Users/user/Desktop/Projects/travel-site/node_modules/normalize.css/normalize.css');
+@import url('../../../node_modules/normalize.css/normalize.css');
 
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_btn.css");
+@import url("modules/_btn.css");
 
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_wrapper.css");
+@import url("modules/_wrapper.css");
 
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_page-section.css");
+@import url("modules/_page-section.css");
 
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_headline.css");
+@import url("modules/_headline.css");
 
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_row.css");
+@import url("modules/_row.css");
 
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_generic-content-container.css");
+@import url("modules/_generic-content-container.css");
 
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_section-title.css");
+@import url("modules/_section-title.css");
 
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_feature-item.css");
+@import url("modules/_feature-item.css");
 
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_testimonial.css");
+@import url("modules/_testimonial.css");
 
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_site-footer.css");
+@import url("modules/_site-footer.css");
 
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_site-header.css");
+@import url("modules/_site-header.css");
 
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_primary-nav.css");
+@import url("modules/_primary-nav.css");
 
-@import url("C:/Users/user/Desktop/Projects/travel-site/app/assets/styles/modules/_reveal-item.css");
+@import url("modules/_reveal-item.css");
+
+@import url("modules/_modal.css");
+
+@import url("modules/_social-icons.css");
