--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -16,9 +16,10 @@
 .page-section--testimonials {
     background-color: #e0e6ef;
 }
-@media (min-width: 530px) {
-.page-section--testimonials {
-    background: url('C:/Users/user/Desktop/Projects/travel-site/app/assets/images/testimonials-bg.jpg') top center no-repeat;
+
+@media (min-width: 640px) {
+.page-section--testimonials{
+    background: url('../../images/testimonials-bg.jpg') top center no-repeat;
     background-size: cover;
     }
 }
