--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -69,7 +69,7 @@
     .site-header__menu-icon {
         width: 15px;
         height: 15px;
-        background: url("C:/Users/user/Desktop/Projects/travel-site/app/assets/images/icons/menu-icon.png");
+        background: url("../../images/icons/menu-icon.png");
         position: absolute;
         top: 10px;
         right: 10px;
